# csv-data-extractor

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
csv_data_extractor/: __init__.py  cli.py  config.py  extractor.py  models.py  transforms.py
docs/: source-scaffold.md
sources/example_npi_officers/: README.md  source.yml
sources/example_npi_officers/fixtures/: officers.csv
sources/utah_npi/: README.md  source.yml
sources/utah_npi/fixtures/: utah-sample.csv
tests/: test_extractor.py
