[project]
name = "npdc-csv-data-extractor"
version = "0.1.0"
description = "CSV extraction scaffold for producing NPDC loader-compatible JSONL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "python-dateutil>=2.9",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
npdc-csv-extractor = "csv_data_extractor.cli:app"

[tool.setuptools.packages.find]
include = ["csv_data_extractor*"]
exclude = ["vendor*", "sources*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["I"]
